2008-07-08  Evi Vanoost  <vanooste@rcbi.rochester.edu>

       * pandora/console/install.php:  Added mysql_error debugging that can be u
ncommented when something goes wrong for clearer troubleshooting

       * pandora_console/pandoradb_data.sql: Fixed a line that had an extra semi
colon (;) which caused the installer to fail

       * pandora_console/index.php: Fixed the code that displays the custom CSS 
code. Now the Console looks good.

       * pandora_console/general/header.php: Fixed the Autorefresh code. Now the
 Autorefresh link switches correctly between grey and white instead of staying w
hite. Also fixed the autorefresh in case that there is no correct $_SERVER['REQU
EST_URI'] so that it doesn't go 404.

2008-07-08  Sancho Lerena <slerena@artica.es>

	*  include/functions_reporting.php: Basic support for async modules.
	General stats (tactical), do not shown async modules as uknown anymore.

	* operation/agentes/estado_agente.php,
	operation/agentes/estado_ultimopaquete.php: Support for async modules.

	* godmode/agentes/modificar_agente.php: Fixed stupid bug in search
	field in last commit.

	* operation/reporting/graph_viewer.php: Added controls to view in the
	new combined graphic mode (lines), and to change size to three pre-
	defined sizes.

	* reporting/fgraph.php: Stacked mode support was missing by unknown
	reason. Reactivated. Added a mode to view combined graphs in "wired"
	mode (lines only).
	
	* godmode/agentes/modificar_agente.php: Disabled agents was not shown,
	so was unable to activate again. Fixed. 

	* godmode/reporting/graph_builder.php: Added support for line mode.
	Disabled agents don't shown in combo. Some other minor fixes. Changed
	to show the name of the module, instead of description.

	* include/config.php: Deleted. This file should not be included in SVN
	
	* images/so_aix.png: New icon for AIX systems.

2008-07-07  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/graph_builder.php: Tab style correction.
